# req_md

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  book.toml  dist-workspace.toml
.github/workflows/: ci.yml  documentation.yml
crates/req_md/: Cargo.toml  README.md
crates/req_md/samples/: get-google.md  multiple-requests.md  requests-with-variables.md
crates/req_md/src/: application.rs  main.rs  parser.rs  pretty_output.rs  req.rs  variables.rs
crates/reqmd/: Cargo.toml
crates/reqmd/src/: opts.rs
crates/reqmd_app/: Cargo.toml  README.md
crates/reqmd_app/src/: command.rs  env.rs  error.rs  lib.rs  reqmd_app.rs
crates/reqmd_app/src/commands/: mod.rs  parse_requests.rs  send_md.rs
crates/reqmd_ast/: Cargo.toml
crates/reqmd_ast/src/: address_string.rs  body_data.rs  document.rs  error.rs  gloabl_http_defaults.rs  http_data.rs  lib.rs  meta_data.rs  parsing.rs  point.rs
crates/reqmd_ast/src/http_data/: parser.rs
crates/reqmd_ast/src/support/: fixtures.rs
crates/reqmd_ast/src/support/fixtures/: post-widgets.md
crates/reqmd_cli/: Cargo.toml
crates/reqmd_cli/src/: lib.rs
crates/reqmd_cli/src/structs/: mod.rs  options.rs  selection.rs  serialized_list.rs  timeout.rs
crates/reqmd_cli/wix/: main.wxs
crates/reqmd_core/: Cargo.toml
crates/reqmd_core/src/: entity.rs  entity_collection.rs  error.rs  factory.rs  file.rs  http_client.rs  http_defaults.rs  http_group.rs  http_inputs.rs  id.rs  lib.rs  md_request.rs  md_request_list.rs
crates/reqmd_core/src/builtin_processors/: env_var_expansion.rs  mod.rs  server_from_hostname.rs  yaml_as_json.rs
crates/reqmd_core/src/builtin_providers/: env_provider.rs  mod.rs
crates/reqmd_core/src/support/: fixtures.rs
crates/reqmd_core/src/support/fixtures/: sample-env-expansion.md  sample-request.md  sample-server-from-hostname.md  sample-yaml-as-json.md
crates/reqmd_explore/: Cargo.toml
crates/reqmd_explore/src/: lib.rs  main.rs
crates/reqmd_explore/src/support/: mod.rs  multi.req.ron  simple.req.ron
crates/reqmd_explore/src/widgets/: body_viewer.rs  explorer.rs  headers_table.rs  key_value_table.rs  mod.rs  query_params_table.rs  request_detail_block.rs  request_list.rs  resource_detail_line.rs
crates/reqmd_http/: Cargo.toml  README.md
crates/reqmd_http/examples/: http-example.rs
crates/reqmd_http/src/: address.rs  client.rs  error.rs  header.rs  lib.rs  request.rs  response.rs
crates/reqmd_http/src/request/: body.rs  builder.rs  builder_methods.rs  factory.rs  method.rs  path.rs  query_string.rs  tests.rs
crates/reqmd_http/src/response/: body.rs  builder.rs  status.rs
crates/reqmd_http/src/support/: mod.rs
crates/reqmd_markdown/: Cargo.toml
crates/reqmd_markdown/src/: ast.rs  error.rs  lib.rs  parsing.rs
crates/reqmd_markdown/src/ast/: address_string.rs  body_data.rs  document.rs  gloabl_http_defaults.rs  http_data.rs  meta_data.rs  position.rs
crates/reqmd_markdown/src/ast/http_data/: parser.rs
crates/reqmd_markdown/src/support/: fixtures.rs
crates/reqmd_markdown/src/support/fixtures/: post-widgets-http.txt
crates/reqmd_tui/: Cargo.toml
crates/reqmd_tui/src/: lib.rs  main.rs
crates/reqmd_tui/src/widgets/: address_detail_line.rs  request_detail_block.rs  request_list.rs
crates/reqmd_tui/wix/: main.wxs
docs/: README.md  SUMMARY.md  changelog.md  cli-installation-methods.md  development-setup.md  library-layout.md  reqmd-format-front-matter.md  reqmd-format-http-requests.md  reqmd-format.md  reqmd-terminal-app-commands.md  reqmd-terminal-app-plugins.md  reqmd-terminal-app.md
docs/assets/: sample.md
docs/crates/: reqmd_app.md
samples/: get-google.md  requests-with-variables.md
scripts/: setup-dev-environment.sh
src/: application.rs  main.rs  new_parser.rs  parser.rs  pretty_output.rs  req.rs  variables.rs
src/req/: meta.rs
