[workspace]
resolver = "3"
members = [
  "crates/req_md",
  "crates/reqmd_core",
  "crates/reqmd_explore",
  "crates/reqmd_http",
]

[workspace.dependencies]

#
#  ## Dependencies to Remove:
#
json = "0.12.0"
dotenv = "0.15.0"
atty = "0.2"
comrak = "0.40"

#
#  ## Dependencies to Keep:
#
bon = { version = "3.7.0" }
clap = { version = "4.1.0", features = ["derive"] }
color-eyre = { version = "0.6.0" }
crossterm = { version = "0.29.0" }
ratatui = { version = "0.29.0", features = ["crossterm"] }
readonly = "0.2.0"
regex = "1.11.0"
reqwest = { version = "0.12.0", features = ["blocking"] }
ron = { version = "0.10.0" }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
thiserror = "2.0.0"
tokio = { version = "1.47.0", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.18.0", features = ["v7"] }

#
# ## Dev Dependencies to Keep:
#
rstest = "0.26.0"
mockall = "0.13.0"
