[workspace]
resolver = "3"
members = [
  "crates/reqmd_app",
  "crates/reqmd_cli",
  "crates/reqmd_core",
  "crates/reqmd_explore",
  "crates/reqmd_http",
  "crates/reqmd_ast",
]

[workspace.dependencies]

#
#  ## Dependencies to Keep:
#
anyhow = "1.0"
bon = { version = "3.7.0" }
clap = { version = "4.1.0", features = ["derive"] }
color-eyre = { version = "0.6.0" }
crossterm = { version = "0.29.0" }
dotenvy = "0.15"
markdown = { version = "1.0.0" }
nom = { version = "8.0.0" }
ratatui = { version = "0.30.0", features = ["crossterm"] }
readonly = "0.2.0"
regex = "1.11.0"
reqwest = { version = "0.13", features = ["blocking"] }
ron = { version = "0.12.0" }
serde = { version = "1.0.0", features = ["derive"] }
serde-saphyr = "0.0.16"
serde_json = "1.0.0"
thiserror = "2.0.0"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.0"
tracing-subscriber = "0.3.0"
tui-scrollview = { version = "0.6" }
url = "2.5.0"

#
# ## Dev Dependencies to Keep:
#
rstest = "0.26.0"
mockall = "0.14.0"
