[package]
name = "req_md"
version = "0.2.1"
authors = ["Benjamin Falk <benjamin.falk@yahoo.com>"]
edition = "2024"

# See more keys and their definitions at:
#     https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url.workspace = true
regex.workspace = true
reqwest.workspace = true
comrak.workspace = true
clap.workspace = true
atty.workspace = true
dotenv.workspace = true
json.workspace = true
