[package]
name = "reqmd"
version = "0.3.0"
authors = ["Benjamin Falk <benjamin.falk@yahoo.com>"]
edition = "2024"

[dependencies]
dotenvy.workspace = true
reqwest.workspace = true
tokio.workspace = true
clap.workspace = true

reqmd_core = { path = "../reqmd_core" }
reqmd_http = { path = "../reqmd_http", features = ["reqwest"] }
