[package]
name = "reqmd_app"
version = "0.2.0"
edition = "2024"
authors = ["Ben Falk <benjamin.falk@yahoo.com>"]
description = "application library interface for reqmd"
keywords = ["markdown", "http"]
license = "MIT"
repository = "https://github.com/benfalk/req_md"

[features]
default = ["builtin-providers-and-processors", "serde"]
serde = ["reqmd_core/serde"]
builtin-providers-and-processors = ["reqmd_core/yaml-as-json"]

[dependencies]
bon.workspace = true
thiserror.workspace = true

reqmd_core = { version = "0.2.0", path = "../reqmd_core", features = [
  "http-client",
] }

[dev-dependencies]
tokio.workspace = true
