[package]
name = "reqmd_cli"
version = "0.1.0"
edition = "2024"
authors = ["Benjamin Falk <benjamin.falk@yahoo.com>"]
description = "CLI tool for reqmd"
keywords = ["makdown", "http"]
license = "MIT"

[[bin]]
name = "reqmd"
path = "src/bin/reqmd.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

reqmd_app = { version = "0.1.0", path = "../reqmd_app" }
