[package]
name = "reqmd_cli"
version = "0.2.1"
edition = "2024"
authors = ["Benjamin Falk <benjamin.falk@yahoo.com>"]
description = "CLI tool for reqmd"
keywords = ["markdown", "http"]
license = "MIT"
repository = "https://github.com/benfalk/req_md"

[package.metadata.wix]
upgrade-guid = "AF807B2B-A28C-4D09-8BD3-230F0D8E637F"
path-guid = "69E5661A-1038-49CD-85FF-D6FA8C37306D"
license = false
eula = false

[[bin]]
name = "reqmd"
path = "src/bin/reqmd.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

reqmd_app = { version = "0.2.1", path = "../reqmd_app" }
