[package]
name = "reqmd_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["serde/derive", "reqmd_http/serde", "url/serde"]
yaml-as-json = ["serde", "serde-saphyr", "serde_json"]
http-client = ["reqmd_http/reqwest", "reqwest"]

[dependencies]
bon.workspace = true
reqmd_http = { path = "../reqmd_http" }
reqmd_ast = { path = "../reqmd_ast" }
thiserror.workspace = true
url.workspace = true

# Optional dependencies
serde = { workspace = true, optional = true }
serde-saphyr = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
