[package]
name = "reqmd_core"
version = "0.2.0"
edition = "2024"
authors = ["Ben Falk <benjamin.falk@yahoo.com>"]
description = "library interface for all reqmd domain code"
keywords = ["markdown", "http"]
license = "MIT"
repository = "https://github.com/benfalk/req_md"

[features]
default = []
serde = ["serde/derive", "reqmd_http/serde", "url/serde", "reqmd_ast/serde"]
yaml-as-json = ["serde", "serde-saphyr", "serde_json"]
http-client = ["reqmd_http/reqwest", "reqwest"]

[dependencies]
bon.workspace = true
reqmd_http = { version = "0.2.0", path = "../reqmd_http" }
reqmd_ast = { version = "0.2.0", path = "../reqmd_ast" }
thiserror.workspace = true
url.workspace = true

# Optional dependencies
serde = { workspace = true, optional = true }
serde-saphyr = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
