[package]
name = "reqmd_explore"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
reqmd_http = { path = "../reqmd_http", features = ["serde", "reqwest"] }
reqmd_markdown = { path = "../reqmd_markdown", features = ["serde"] }
reqwest = { workspace = true }
tokio = { workspace = true }
tui-scrollview = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
