[package]
name = "reqmd_explore"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tui-scrollview = { workspace = true }

reqmd_http = { path = "../reqmd_http", features = ["serde", "reqwest"] }
reqmd_ast = { path = "../reqmd_ast", features = ["serde"] }
reqmd_core = { path = "../reqmd_core", features = ["serde", "yaml-as-json"] }

[dev-dependencies]
rstest = { workspace = true }
