[package]
name = "reqmd_http"
version = "0.2.1"
edition = "2024"
authors = ["Ben Falk <benjamin.falk@yahoo.com>"]
description = "http library interface for reqmd"
keywords = ["markdown", "http"]
license = "MIT"
repository = "https://github.com/benfalk/req_md"

[features]
default = []
serde = ["serde/derive", "url/serde"]
reqwest = ["dep:reqwest"]
mock = ["mockall"]

[dependencies]
readonly.workspace = true
url.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
mockall.workspace = true

[[example]]
name = "http-example"
path = "examples/http-example.rs"
