[package]
name = "reqmd_tui"
version = "0.2.1"
edition = "2024"
authors = ["Benjamin Falk <benjamin.falk@yahoo.com>"]
description = "TUI tool for reqmd"
keywords = ["markdown", "http"]
license = "MIT"
repository = "https://github.com/benfalk/req_md"

[package.metadata.wix]
upgrade-guid = "62F95563-3225-4213-A8CA-DA4A59E21567"
path-guid = "B3B2B616-99FE-49A6-884D-F43BBA50CA33"
license = false
eula = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tui-scrollview = { workspace = true }

reqmd_http = { version = "0.2.1", path = "../reqmd_http", features = [
  "serde",
  "reqwest",
] }
reqmd_ast = { version = "0.2.1", path = "../reqmd_ast", features = ["serde"] }
reqmd_core = { version = "0.2.1", path = "../reqmd_core", features = [
  "serde",
  "yaml-as-json",
] }

[dev-dependencies]
rstest = { workspace = true }
